--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,8 @@
 	"require" : {
 		"php" : ">=7.0.0",
 		"fideloper/proxy" : "~4.0",
-		"guzzlehttp/guzzle" : "^6.3",
 		"laravel/framework" : ">=5.5",
-		"laravel/tinker" : "~1.0",
+		"laravel/tinker" : "^1.0",
 		"mervick/curl-helper" : "^1.1"
 	},
     "require-dev": {
